--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Algorithm task1</title>
 </head>
+<style>
+    * {
+        box-sizing: border-box;
+    }
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: cadetblue;
+    
+    }
+    button{
+        color:blanchedalmond;
+        background-color: blueviolet;
+        font-size: 20px;
+        padding: 10px;
+        margin: 10px;
+    }
+
+    .items {
+        color: green;
+        background-color: chocolate;
+        font-size: 50px;
+    }
+   
+</style>
 <body>
-    <p>Solution for solving algorithm array</p>
+    <p>Solution for solving Event Task</p>
+    <div onmouseover="over()" onmouseout="out()" >
+        <button class="button" type="submit">button</button>
+    </div>
+   
+   
 </body>
 <script src="script.js"></script>
 </html>
