--- a/index.html
+++ b/index.html
@@ -7,40 +7,10 @@
 
     <title>Algorithm task1</title>
 </head>
-<style>
-    * {
-        box-sizing: border-box;
-    }
-    body{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: cadetblue;
-    
-    }
-    button{
-        color:blanchedalmond;
-        background-color: blueviolet;
-        font-size: 20px;
-        padding: 10px;
-        margin: 10px;
-    }
 
-    .items {
-        color: green;
-        background-color: chocolate;
-        font-size: 50px;
-    }
-   
-</style>
 <body>
-    <p>Solution for solving Event Task</p>
-    <div onmouseover="over()" onmouseout="out()" >
-        <button class="button" type="submit">button</button>
-    </div>
-   
-   
+    <p>Solution for solving Array Task</p> 
+   <div id="list"></div>
 </body>
 <script src="script.js"></script>
 </html>
